Updated print stylingAnd renamed sidebar to page-information. Added date information.

--- a/_includes/content.liquid
+++ b/_includes/content.liquid
@@ -1,5 +1,8 @@
 <section class="content">
-  {% include metadata.liquid %}
+  {% if page.bpmn %}
+    <h3>Process (BPMN)</h3>
+    {% include bpmn.liquid url=page.bpmn %}
+  {% endif %}
   <article class="markdown-body">
     {{ content }}
   </article>
