Improve sidebar and footer content

--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -42,6 +42,9 @@
     </section>
   {% endif %}
 </footer>
+
+{% include foundation-nav.liquid %}
+
 {% if site.hide_foundation_footer != true %}
 <footer id="foundation-footer">
   <section>
