Improve footer structure

--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -6,8 +6,6 @@
   <body class="{% if page.toc != false and site.toc == true or page.toc == true %}with-toc{% endif %} {% if site.show_navigation == true %}with-site-nav{% endif %}">
 
     {% include foundation-nav.liquid %}
-
-    <hr>
         
     {% include header.liquid %}
 
@@ -18,6 +16,10 @@
     <hr>
 
     {% include footer.liquid %}
+
+    {% include foundation-nav.liquid %}
+
+    {% include foundation-footer.liquid %}
 
   </body>
 
