Improved site navigation tree

--- a/_includes/navigation.liquid
+++ b/_includes/navigation.liquid
@@ -1,29 +1,1 @@
-{% capture html %}
-<ul>
-  {% assign pages = site.pages | sort: "title" | sort: "order" %}
-  {% for node in pages %}
-    
-    {% unless node.title == nil or node.hidden == true or node.path == '404.md' %}
-      {% capture slug    %}{{ node.url | split: "/"   | last         }}{% endcapture %}
-      {% capture current %}{{ node.url | remove: slug | remove: "//" }}{% endcapture %}
-      {% capture index_current %}{{ node.url | remove: slug | remove: '//' | append: "/"}}{% endcapture %}
-      
-      {% if current == include.context %}
-        <li>
-          <a href="{{ node.url }}" class="{% if page.url == node.url %}active{% endif %}">{{ node.title }}</a> 
-        </li>
-      {% endif %}
-
-      {% if node.path contains 'index.' %}
-        {% if index_current == include.context %}
-          <li><a href="{{ node.url }}" class="{% if page.url == node.url %}active{% endif %}">{{ node.title }}</a>
-            {% include navigation.liquid context=node.url %}
-          </li>
-        {% endif %}
-        </li>
-      {% endif %}
-
-    {% endunless %}
-  {% endfor %}
-</ul>
-{% endcapture %}{{ html | strip_newlines | replace:'    ','' | replace:'    ','' | replace:'  ',' ' }}
+{% include list-dir-pages.liquid dir="/" %}
