--- a/assets/style.css
+++ b/assets/style.css
@@ -581,6 +581,12 @@ input#show-site-nav:checked ~ ul {
   line-height: 0;
 }
 
+@media print {
+  #theme-breadcrumbs {
+    display: none;
+  }
+}
+
 /* 
  * Edit links
 */
