--- a/_includes/breadcrumbs.liquid
+++ b/_includes/breadcrumbs.liquid
@@ -6,7 +6,7 @@
     {% for part in url_parts %}
     {% assign part_url = part_url | append: part | append: '/' %}
     {% assign crumb = site.pages | where: 'url', part_url | first %}
-    {% if crumb.url != blank %}
+    {% if crumb.url != '' %}
     {% if page.url != crumb.url %}
     <li><a href="{{ crumb.url }}">{{ crumb.title | default: crumb.url }}</a></li>
     {% endif %}
