Add phone number

--- a/_includes/theme-footer.liquid
+++ b/_includes/theme-footer.liquid
@@ -21,6 +21,7 @@
       <address>
         Keizersgracht 617, 1017 DS, Amsterdam, the Netherlands
       </address></li>
+      <li>Phone: <a href="tel:+31202444500">+31 20 2 444 500</a>
       <li>Twitter: <a href="https://twitter.com/publiccodenet">@publiccodenet</a>
     </ul>
   </section>
