--- a/assets/style.css
+++ b/assets/style.css
@@ -678,6 +678,7 @@ main .edit-links a svg {
     align-items: flex-start;
     justify-content: flex-start;
     flex-wrap: wrap;
+    justify-content: space-between;
     padding: 1rem;
   }
   footer section {
