Add careers to the footer

--- a/_includes/theme-footer.liquid
+++ b/_includes/theme-footer.liquid
@@ -13,6 +13,11 @@
     <p>More on <a href="https://projects.publiccode.net">projects.publiccode.net</a></p>
   </section>
   <section>
+    <h2><a href="https://publiccode.net/careers/">Careers</a></h2>
+    <p>Join us in working to fulfil our mission to enable public-purpose software and policy that is open and collaborative.</p>
+    <p><a href="https://publiccode.net/careers/">About working with us and open positions</a></p>
+  </section>
+  <section>
     <h3><a href="https://about.publiccode.net/organization/contact-details.html">Contact</a></h3>
     <ul>
       <li>Join our <a href="https://forms.gle/gn7wR2Eaxbv5g1BF9">mailing list</a>
