--- a/_includes/theme-footer.liquid
+++ b/_includes/theme-footer.liquid
@@ -13,8 +13,8 @@
     <p>More on <a href="https://projects.publiccode.net">projects.publiccode.net</a></p>
   </section>
   <section>
-    <h2><a href="https://publiccode.net/careers/">Careers</a></h2>
-    <p>Join us in working to fulfil our mission to enable public-purpose software and policy that is open and collaborative.</p>
+    <h3><a href="https://publiccode.net/careers/">Careers</a></h3>
+    <p>Calling all publicly minded open source people! Join our staff.</p>
     <p><a href="https://publiccode.net/careers/">About working with us and open positions</a></p>
   </section>
   <section>
