Better redirect layout

--- a/_layouts/redirected.liquid
+++ b/_layouts/redirected.liquid
@@ -1,25 +1,11 @@
-<!DOCTYPE html>
-<html lang="{{ site.lang | default: 'en'}}">
+---
+layout: default
+---
 
-  {% include head.liquid %}
+<h2>Moved</h2>
 
-  <body class="{% if page.toc != false and site.toc == true or page.toc == true %}with-toc{% endif %} {% if site.show_navigation == true %}with-site-nav{% endif %}">
+<p>This page has been moved to <a href="{{page.redirect_to}}">{{page.redirect_to}}</a></p>
 
-    {% include theme-nav.liquid %}
+<hr>
 
-    <main>
-
-    <h2>Moved</h2>
-
-    <p>This page has been moved to <a href="{{page.redirect_to}}">{{page.redirect_to}}</a></p>
-
-    <article>{{ content }}</article>
-    </main>
-
-    {% include theme-nav.liquid %}
-
-    {% include theme-footer.liquid %}
-
-  </body>
-
-</html>
+{{ content }}
