--- a/_layouts/redirected.liquid
+++ b/_layouts/redirected.liquid
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h2>Moved</h2>
+<h2 id="moved-message">Moved</h2>
 
 <p>This page has been moved to <a href="{{page.redirect_to}}">{{page.redirect_to}}</a></p>
 
