Add RSIN to footer

--- a/_includes/theme-footer.liquid
+++ b/_includes/theme-footer.liquid
@@ -31,7 +31,7 @@
     </ul>
   </section>
   <section>
-    <p>Foundation for Public Code vereniging (met volledige rechtsbevoegdheid) <a href="https://about.publiccode.net/organization/governance-model.html" title="Governance model">is a member owned association</a> registered under <a href="https://www.kvk.nl/orderstraat/product-kiezen/?kvknummer=74996452" title="KVK registration">chamber of commerce (KvK) registration 74996452</a>.</p>
+    <p>Foundation for Public Code vereniging (met volledige rechtsbevoegdheid) <a href="https://about.publiccode.net/organization/governance-model.html" title="Governance model">is a member owned association</a> registered under <a href="https://www.kvk.nl/orderstraat/product-kiezen/?kvknummer=74996452" title="KVK registration">chamber of commerce (KvK) registration 74996452</a> and with identification number (RSIN) 860102294.</p>
   </section>
 </footer>
 {% endif %}
